<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.book-it</groupId>
	<artifactId>BookIt</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<properties>
		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.compiler.target>1.8</maven.compiler.target>
		<maven-plugin-api.version>3.3.9</maven-plugin-api.version>
		<maven-javadoc-plugin>2.10.1</maven-javadoc-plugin>
	</properties>
	<dependencies>
		<dependency>
			<groupId>io.github.bonigarcia</groupId>
			<artifactId>webdrivermanager</artifactId>
			<version>3.3.0</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.12</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>io.cucumber</groupId>
			<artifactId>cucumber-java</artifactId>
			<version>4.2.0</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>io.cucumber</groupId>
			<artifactId>cucumber-junit</artifactId>
			<version>4.2.0</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.seleniumhq.selenium</groupId>
			<artifactId>selenium-java</artifactId>
			<version>3.141.59</version>
		</dependency>
		<dependency>
			<groupId>com.aventstack</groupId>
			<artifactId>extentreports</artifactId>
			<version>3.1.2</version>
		</dependency>
		<dependency>
			<groupId>com.codeborne</groupId>
			<artifactId>phantomjsdriver</artifactId>
			<version>1.4.0</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-core</artifactId>
			<version>2.15.0</version>
		</dependency>
		<dependency>
			<groupId>org.apache.poi</groupId>
			<artifactId>poi</artifactId>
			<version>4.0.1</version>
		</dependency>
		<dependency>
			<groupId>io.rest-assured</groupId>
			<artifactId>rest-assured</artifactId>
			<version>3.3.0</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.poi</groupId>
			<artifactId>poi-ooxml</artifactId>
			<version>4.0.1</version>
		</dependency>
		<dependency>
			<groupId>info.cukes</groupId>
			<artifactId>gherkin</artifactId>
			<version>2.7.3</version>
		</dependency>
		<dependency>
			<groupId>org.postgresql</groupId>
			<artifactId>postgresql</artifactId>
			<version>42.2.5</version>
		</dependency>
	</dependencies>
	<profiles>
		<profile>
			<id>SmokeTest</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven</groupId>
						<artifactId>maven-plugin-api</artifactId>
						<version>${maven-plugin-api.version}</version>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-javadoc-plugin</artifactId>
						<version>${maven-javadoc-plugin}</version>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-compiler-plugin</artifactId>
						<version>3.2</version>
						<configuration>
							<source>1.8</source>
							<target>1.8</target>
						</configuration>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-failsafe-plugin</artifactId>
						<version>2.18</version>
						<configuration>
							<testFailureIgnore>true</testFailureIgnore>
							<skipTests>false</skipTests>
							<includes>
								<include>**/SmokeTestRunner.java</include>
							</includes>
						</configuration>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-surefire-plugin</artifactId>
						<version>2.18.1</version>
						<configuration>
							<parallel>classes</parallel>
							<forkMode>perthread</forkMode>
							<threadCount>10</threadCount>
							<reuseForks>false</reuseForks>
							<argLine>-Duser.language=en</argLine>
							<argLine>-Xmx1024m</argLine>
							<argLine>-XX:MaxPermSize=256m</argLine>
							<argLine>-Dfile.encoding=UTF-8</argLine>
							<useFile>false</useFile>
							<includes>
								<include>**/SmokeTestRunner.java</include>
							</includes>
							<testFailureIgnore>true</testFailureIgnore>
						</configuration>
					</plugin>
					<plugin>
						<groupId>net.masterthought</groupId>
						<artifactId>maven-cucumber-reporting</artifactId>
						<version>4.4.0</version>
						<executions>
							<execution>
								<id>execution</id>
								<phase>verify</phase>
								<goals>
									<goal>generate</goal>
								</goals>
								<configuration>
									<projectName>cucumber-jvm-example</projectName>
									<!-- output directory for the generated report -->
									<outputDirectory>${project.build.directory}</outputDirectory>
									<!-- optional, defaults to outputDirectory if not specified -->
									<inputDirectory>${project.build.directory}</inputDirectory>

									<jsonFiles>
										<!-- supports wildcard or name pattern -->
										<param>**/*.json</param>
									</jsonFiles>
									<classificationFiles>
										<!-- supports wildcard or name pattern -->
										<param>sample.properties</param>
										<param>other.properties</param>
									</classificationFiles>
									<!--<parallelTesting>false</parallelTesting> -->
								</configuration>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>Regression</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven</groupId>
						<artifactId>maven-plugin-api</artifactId>
						<version>${maven-plugin-api.version}</version>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-javadoc-plugin</artifactId>
						<version>${maven-javadoc-plugin}</version>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-compiler-plugin</artifactId>
						<version>3.2</version>
						<configuration>
							<source>1.8</source>
							<target>1.8</target>
						</configuration>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-failsafe-plugin</artifactId>
						<version>2.18</version>
						<configuration>
							<testFailureIgnore>true</testFailureIgnore>
							<skipTests>false</skipTests>
							<includes>
								<include>**/RegressionRunner*.java</include>
							</includes>
						</configuration>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-surefire-plugin</artifactId>
						<version>2.18.1</version>
						<configuration>
							<parallel>classes</parallel>
							<forkMode>perthread</forkMode>
							<threadCount>10</threadCount>
							<reuseForks>false</reuseForks>
							<argLine>-Duser.language=en</argLine>
							<argLine>-Xmx1024m</argLine>
							<argLine>-XX:MaxPermSize=256m</argLine>
							<argLine>-Dfile.encoding=UTF-8</argLine>
							<useFile>false</useFile>
							<includes>
								<include>**/RegressionRunner*.java</include>
							</includes>
							<testFailureIgnore>true</testFailureIgnore>
						</configuration>
					</plugin>
					<plugin>
						<groupId>net.masterthought</groupId>
						<artifactId>maven-cucumber-reporting</artifactId>
						<version>4.4.0</version>
						<executions>
							<execution>
								<id>execution</id>
								<phase>verify</phase>
								<goals>
									<goal>generate</goal>
								</goals>
								<configuration>
									<projectName>cucumber-jvm-example</projectName>
									<!-- output directory for the generated report -->
									<outputDirectory>${project.build.directory}</outputDirectory>
									<!-- optional, defaults to outputDirectory if not specified -->
									<inputDirectory>${project.build.directory}</inputDirectory>

									<jsonFiles>
										<!-- supports wildcard or name pattern -->
										<param>**/*.json</param>
									</jsonFiles>
									<classificationFiles>
										<!-- supports wildcard or name pattern -->
										<param>sample.properties</param>
										<param>other.properties</param>
									</classificationFiles>
									<!--<parallelTesting>false</parallelTesting> -->
								</configuration>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

</project>